<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.tae.androidassignment1.customerProfileActivity">

    <Button
        android:id="@+id/btnChangePhoto"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_button_background2x"
        android:text="@string/changePhotoTxt"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:text="@string/changePhotoTxt" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/profileNameText"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:ems="10"
        android:fontFamily="@font/museosans_300"
        android:hint="@string/profileUsernameText"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    p

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:ems="10"
        android:fontFamily="@font/museosans_300"
        android:hint="@string/profilePasswordText"
        android:inputType="textPassword"
        android:singleLine="false"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="116dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/black"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:ems="10"
        android:fontFamily="@font/museosans_300"
        android:hint="@string/ageTxt"
        android:inputType="number"
        android:singleLine="false"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangePhoto" />

    <Spinner
        android:id="@+id/sCountry"
        android:layout_width="220dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_button_background2x"
        android:ellipsize="marquee"
        android:spinnerMode="dialog"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDatePicker" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="98dp"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_button_background2x"
        android:fontFamily="@font/museosans_300"
        android:text="SAVE"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtPostalAddress"
        app:layout_constraintTop_toBottomOf="@+id/rgGender"
        app:layout_constraintVertical_bias="0.529"
        tools:text="@string/btnSave" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sCountry"
        app:layout_constraintVertical_bias="0.075">

        <TextView
            android:id="@+id/txtGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/museosans_500"
            android:text="Gender"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:fontFamily="@font/museosans_500"
            android:text="Female"
            android:textColorLink="@android:color/white" />

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/museosans_500"
            android:text="Male"
            android:textColorLink="@android:color/white" />

        <RadioButton
            android:id="@+id/rbNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/museosans_500"
            android:text="Not-Specified"
            android:textColorLink="@android:color/white" />
    </RadioGroup>

    <EditText
        android:id="@+id/txtPostalAddress"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:ems="10"
        android:fontFamily="@font/museosans_300"
        android:hint="Postal Address (Opt)"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGender"
        app:layout_constraintVertical_bias="0.563" />

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:fontFamily="@font/museosans_500"
        android:text="CHOOSE BIRTH DATE"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAge" />

</android.support.constraint.ConstraintLayout>
